# inferscale

./: README.md  pyproject.toml
chart/files/: inferscale_metrics_dashboard.json
src/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/api/: client.ts
src/frontend/src/components/: ErrorBoundary.tsx  InstanceTypeSelector.tsx
src/frontend/src/components/dashboard/: MetricCard.tsx
src/frontend/src/components/endpoints/: CreateEndpointWizard.tsx  StepIndicator.tsx
src/frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/frontend/src/components/ui/: BackLink.tsx  Button.tsx  CustomSelect.tsx  DeleteConfirmModal.tsx  FormField.tsx  Modal.tsx  Pagination.tsx  SkeletonRows.tsx  StatusBadge.tsx
src/frontend/src/hooks/: useQueries.ts
src/frontend/src/pages/: DashboardPage.tsx  EndpointDetailPage.tsx  EndpointsPage.tsx  ModelDetailPage.tsx  ModelsPage.tsx
src/frontend/src/types/: index.ts
src/inferscale/: __main__.py  app.py  cli.py  config.py  database.py
src/inferscale/api/: deps.py
src/inferscale/api/api_v1/: api.py
src/inferscale/api/api_v1/routes/: dashboard.py  endpoints.py  grafana.py  models.py
src/inferscale/clients/: k8s.py
src/inferscale/db/: alembic.ini  models.py
src/inferscale/db/alembic/: env.py
src/inferscale/schemas/: endpoint.py  grafana.py  model.py
src/inferscale/services/: dashboard_service.py  endpoint_service.py  model_service.py  predictive_service.py  task_service.py
(+5 files in other folders)
