[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferscale"
version = "0.1.0"
description = "A fully automated MLOps platform built to democratize AI infrastructure"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "kubernetes>=31,<33",
    "boto3>=1.35,<2",
    "typer>=0.14,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "aiosqlite>=0.20,<1",
    "ruff>=0.8,<1",
]

[project.scripts]
inferscale = "inferscale.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/inferscale"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
